# cptext

./: README.md  pyproject.toml
cptext/: run.py
src/cptext/: run.py
